build-log.txt

> geo-portfolio@0.1.0 build
> next build

[baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
   Ôû▓ Next.js 16.0.5 (Turbopack)

   Creating an optimized production build ...
[baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
Error: Can't resolve 'tailwindcss-animate' in 'C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\src\app'
    [at finishWithoutResolve (C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\node_modules\enhanced-resolve\lib\Resolver.js:565:18)]
    [at C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\node_modules\enhanced-resolve\lib\Resolver.js:657:14]
    [at C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\node_modules\enhanced-resolve\lib\Resolver.js:718:5]
    [at eval (eval at create (C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\node_modules\tapable\lib\HookCodeFactory.js:31:10), <anonymous>:15:1)]
    [at C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\node_modules\enhanced-resolve\lib\Resolver.js:718:5]
    [at eval (eval at create (C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\node_modules\tapable\lib\HookCodeFactory.js:31:10), <anonymous>:27:1)]
    [at C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\node_modules\enhanced-resolve\lib\DescriptionFilePlugin.js:89:43]
    [at C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\node_modules\enhanced-resolve\lib\Resolver.js:718:5]
    [at eval (eval at create (C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\node_modules\tapable\lib\HookCodeFactory.js:31:10), <anonymous>:15:1)]
    [at C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\node_modules\enhanced-resolve\lib\Resolver.js:718:5] {
  details: "resolve 'tailwindcss-animate' in 'C:\\Users\\lgeov\\Documents\\Data Analytics Projects\\geo-portfolio\\src\\app'\n" +
    '  Parsed request is a module\n' +
    '  using description file: C:\\Users\\lgeov\\Documents\\Data Analytics Projects\\geo-portfolio\\package.json (relative path: ./src/app)\n' +
    '    resolve as module\n' +
    "      C:\\Users\\lgeov\\Documents\\Data Analytics Projects\\geo-portfolio\\src\\app\\node_modules doesn't exist or is not a directory\n" +
    "      C:\\Users\\lgeov\\Documents\\Data Analytics Projects\\geo-portfolio\\src\\node_modules doesn't exist or is not a directory\n" +
    '      looking for modules in C:\\Users\\lgeov\\Documents\\Data Analytics Projects\\geo-portfolio\\node_modules\n' +
    '        single file module\n' +
    '          using description file: C:\\Users\\lgeov\\Documents\\Data Analytics Projects\\geo-portfolio\\package.json (relative path: ./node_modules/tailwindcss-animate)\n' +
    '            no extension\n' +
    "              C:\\Users\\lgeov\\Documents\\Data Analytics Projects\\geo-portfolio\\node_modules\\tailwindcss-animate doesn't exist\n" +
    '            .js\n' +
    "              C:\\Users\\lgeov\\Documents\\Data Analytics Projects\\geo-portfolio\\node_modules\\tailwindcss-animate.js doesn't exist\n" +
    '            .json\n' +
    "              C:\\Users\\lgeov\\Documents\\Data Analytics Projects\\geo-portfolio\\node_modules\\tailwindcss-animate.json doesn't exist\n" +
    '            .node\n' +
    "              C:\\Users\\lgeov\\Documents\\Data Analytics Projects\\geo-portfolio\\node_modules\\tailwindcss-animate.node doesn't exist\n" +
    '            .ts\n' +
    "              C:\\Users\\lgeov\\Documents\\Data Analytics Projects\\geo-portfolio\\node_modules\\tailwindcss-animate.ts doesn't exist\n" +
    "        C:\\Users\\lgeov\\Documents\\Data Analytics Projects\\geo-portfolio\\node_modules\\tailwindcss-animate doesn't exist\n" +
    "      C:\\Users\\lgeov\\Documents\\Data Analytics Projects\\node_modules doesn't exist or is not a directory\n" +
    "      C:\\Users\\lgeov\\Documents\\node_modules doesn't exist or is not a directory\n" +
    "      C:\\Users\\lgeov\\node_modules doesn't exist or is not a directory\n" +
    "      C:\\Users\\node_modules doesn't exist or is not a directory\n" +
    "      C:\\node_modules doesn't exist or is not a directory"
}

> Build error occurred
Error: Turbopack build failed with 2 errors:
./src/app/globals.css
Error evaluating Node.js code
CssSyntaxError: tailwindcss: C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\src\app\globals.css:1:1: Can't resolve 'tailwindcss-animate' in 'C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\src\app'
    at Input.error (node_modules/postcss/lib/input.js:135:16) [C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\.next\build\chunks\node_modules_fe693df6._.js:4651:22]
    at Root.error (node_modules/postcss/lib/node.js:146:32) [C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\.next\build\chunks\node_modules_fe693df6._.js:928:38]
    [at Object.Once (C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\node_modules\@tailwindcss\postcss\dist\index.js:10:6912)]
    at async LazyResult.runAsync (node_modules/postcss/lib/lazy-result.js:293:11) [C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\.next\build\chunks\node_modules_fe693df6._.js:6206:21]
    at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34) [C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\.next\build\chunks\[root-of-the-server]__51225daf._.js:146:36]
    at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23) [C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\.next\build\chunks\[root-of-the-server]__974941ed._.js:443:31]

Import trace:
  Client Component Browser:
    ./src/app/globals.css [Client Component Browser]
    ./src/app/layout.tsx [Server Component]


./src/components/ui/separator.tsx:4:1
Module not found: Can't resolve '@radix-ui/react-separator'
  2 |
  3 | import * as React from "react"
> 4 | import * as SeparatorPrimitive from "@radix-ui/react-separator"
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  5 |
  6 | import { cn } from "@/lib/utils"
  7 |



Import trace:
  Server Component:
    ./src/components/ui/separator.tsx
    ./src/app/about/page.tsx

https://nextjs.org/docs/messages/module-not-found


    at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34) [C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\.next\build\chunks\[root-of-the-server]__51225daf._.js:146:36])
    at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23) [C:\Users\lgeov\Documents\Data Analytics Projects\geo-portfolio\.next\build\chunks\[root-of-the-server]__974941ed._.js:443:31])
    at <unknown> (./src/components/ui/separator.tsx:4:1)
    at <unknown> (https://nextjs.org/docs/messages/module-not-found)
Assertion failed: !(handle->flags & UV_HANDLE_CLOSING), file c:\ws\deps\uv\src\win\async.c, line 76
